--- a/style.css
+++ b/style.css
@@ -6,6 +6,31 @@ h1, p {
     color: white;
 }
 
+.mainContainer {
+    display: grid;
+    grid-gap: 10px;
+}
+
+.worldMapItem {
+    grid-row-start: 1;
+    grid-row-end: 2;
+    grid-column-start: 1;
+    grid-column-end: 2;
+}
+
+.tileViewItem {
+    grid-row-start: 1;
+    grid-row-end: 2;
+    grid-column-start: 2;
+    grid-column-end: 3;
+}
+
+.creatureCounter {
+    color: white;
+    background-color: #161616;
+    font-size: 16px;
+}
+
 .grassland {
     height: 25px;
     width: 25px;
@@ -16,6 +41,14 @@ h1, p {
     height: 25px;
     width: 25px;
     background-color: #ffff00;
+}
+
+#tileView {
+    width: 600px;
+    height: 250px;
+    background-color: #222222;
+    border: 2px solid #666666;
+    overflow: auto;
 }
 
 #license {
