--- a/style.css
+++ b/style.css
@@ -2,8 +2,9 @@ body {
     background: #161616
 }
 
-h1, p {
+h1, p, b {
     color: white;
+    font-family: 'Courier New';
 }
 
 .mainContainer {
@@ -27,7 +28,7 @@ h1, p {
 
 .creatureCounter {
     color: white;
-    background-color: #161616;
+    background-color: #414141;
     font-size: 16px;
 }
 
@@ -35,16 +36,25 @@ h1, p {
     height: 25px;
     width: 25px;
     background-color: #00ff00;
+    text-align: center;
 }
 
 .desert {
     height: 25px;
     width: 25px;
     background-color: #ffff00;
+    text-align: center;
+}
+
+.sea {
+    height: 25px;
+    width: 25px;
+    background-color: #0000ff;
+    text-align: center;
 }
 
 #tileView {
-    width: 600px;
+    width: 800px;
     height: 250px;
     background-color: #222222;
     border: 2px solid #666666;
