--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ h1, p, b, div, td, th {
 #tileViewItem,
 #creatureViewItem {
     height: 100%;
-    max-height: 600px;
+    height: 600px;
     border: 2px solid #666666;
     background-color: #222222;
     border-radius: 8px;
@@ -46,6 +46,7 @@ h1, p, b, div, td, th {
 
 #worldMapItem {
     width: 324px;
+    height: 324px;
     grid-row-start: 1;
     grid-row-end: 2;
     grid-column-start: 1;
@@ -118,6 +119,10 @@ h1, p, b, div, td, th {
     background-color: #493e28;
 }
 
+.void {
+    background-color: #000000;
+}
+
 .barViewCellFull,
 .barViewCellEmpty,
 .genePowerCellFull,
@@ -148,6 +153,11 @@ h1, p, b, div, td, th {
     padding-left: 8px;
     padding-right: 8px;
     background-color: transparent;
+}
+
+#deadButton {
+    width: 100%;
+    height: 40px;
 }
 
 .deadLabel {
